--- a/upload-server/package.json
+++ b/upload-server/package.json
@@ -9,9 +9,11 @@
   "author": "Jussi Saurio",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "aws-sdk": "^2.449.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
+    "uuid": "^3.3.2"
   }
 }
